--- a/src/containers/Tenant/Diagnostics/Healthcheck/Healthcheck.scss
+++ b/src/containers/Tenant/Diagnostics/Healthcheck/Healthcheck.scss
@@ -3,9 +3,11 @@
 @import '@gravity-ui/uikit/styles/mixins.scss';
 
 .healthcheck {
-    // Since most of the inner containers have fixed width, we can set fixed width here as well
-    // Thus we will get rid of unneeded layout shift when scrollbar appear
-    min-width: 885px;
+    &_expanded {
+        // Since most of the inner containers have fixed width, we can set fixed width here as well
+        // Thus we will get rid of unneeded layout shift when scrollbar appear
+        min-width: 885px;
+    }
 
     &__details {
         padding: 25px 20px 20px;
